--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "clock-coin",
   "version": "0.1.0",
+  "homepage": "https://mydemo.sandbox.co.ke/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
